--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
 name = "libinspector"
+description = "Memory scanning crate for Linux"
+
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+readme = "README.md"
+homepage = ""
+repository = "https://github.com/standard3/libinspector/"
+
+keywords = ["memory", "scanning", "linux"]
+exclude = [".github", "CONTRIBUTING.md", "CODE_OF_CONDUCT.md", "assets"]
+license = "GPL-3.0"
 
 [dependencies]
